--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "element-plus": "^2.0.6",
     "vue": "^3.2.31"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
+    "unplugin-auto-import": "^0.6.4",
+    "unplugin-vue-components": "^0.18.0",
     "vite": "^2.8.4"
   }
 }
