--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "element-plus": "^2.0.6",
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "vue-axios": "^3.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
